@@ -1,5 +1,8 @@
 2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>
 
+	* Sybase.py: Corrected test test_non_existing_proc - Raising
+	StoredProcedureError when calling a non-existing stored procedure
+
 	* Sybase.py: Corrected test test_duplicate_error - Raising
 	IntegrityError exception when trying to insert a duplicate value
 
